--- a/index.html
+++ b/index.html
@@ -55,6 +55,26 @@
                 </div>
             </div>
         </div>
+        <div class="page4">
+            <div id="highlight">
+                <h4>highlight</h4>
+                <div id="butn"><h4>↗See the work↗</h4></div>
+            </div>
+            <div class="container1">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2418&h=1390&fm=avif" alt="">
+                <div class="box1">
+                    <div id="box-cursor"></div>
+                </div>
+            </div>
+            <div class="container2">
+                <div id="img-left">
+                    <img src="https://images.prismic.io/rejouice-2024/Z2AYnZbqstJ98i2G_oura-abdul-ovaice-photography-cd-21.png?auto=format,compress&w=2418&h=3140&fm=avif" alt="">
+                </div>
+                <div id="img-right">
+                    <img src="https://images.prismic.io/rejouice-2024/Z2AYnJbqstJ98i2E_moxionpower.2023.04.onlocation-17821.png?auto=format,compress&w=2418&h=3149&fm=avif" alt="">
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
