--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <nav>
+        <h3>The growth Accelerator</h3>
+        <div id="nav-center">
+            <h4>home</h4>
+            <h4>work</h4>
+            <h4>about</h4>
+            <h4>service</h4>
+            <h4>contact</h4>
+        </div>
+        <h4>let's talk ↗</h4>
+    </nav>
     <div id="main">
         <div class="page1">
             <div data-scroll data-scroll-speed="0"  class="page1-content">
-                <nav>
-                   <h3>The growth Accelerator</h3>
-                    <div id="nav-center">
-                        <h4>home</h4>
-                        <h4>work</h4>
-                        <h4>about</h4>
-                        <h4>service</h4>
-                        <h4>contact</h4>
-                    </div>
-                    <h4>let's talk ↗</h4>
-                </nav>
                 <h1 class="words" >rejouice</h1>
                 <div id="bottom">
                     <h3>Strategy, Design, <br>Performance.</h3>
@@ -63,15 +64,30 @@
             <div class="container1">
                 <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2418&h=1390&fm=avif" alt="">
                 <div class="box1">
-                    <div id="box-cursor"></div>
+                    <div  id="box-cursor">
+                        <h5>Case study Rivian</h5>
+                        <video autoplay loop muted src="./video2.mp4"></video>
+                    </div>
                 </div>
             </div>
             <div class="container2">
                 <div id="img-left">
                     <img src="https://images.prismic.io/rejouice-2024/Z2AYnZbqstJ98i2G_oura-abdul-ovaice-photography-cd-21.png?auto=format,compress&w=2418&h=3140&fm=avif" alt="">
+                    <div class="box2">
+                        <div  id="box2-cursor">
+                            <h5>Case study Oura Ring</h5>
+                            <video autoplay loop muted src="./video2.mp4"></video>
+                        </div>
+                    </div>
                 </div>
                 <div id="img-right">
                     <img src="https://images.prismic.io/rejouice-2024/Z2AYnJbqstJ98i2E_moxionpower.2023.04.onlocation-17821.png?auto=format,compress&w=2418&h=3149&fm=avif" alt="">
+                    <div class="box3">
+                        <div  id="box3-cursor">
+                            <h5>Case study Moxion Power</h5>
+                            <video autoplay loop muted src="./video2.mp4"></video>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
