--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="page2">
-            <video data-scroll data-scroll-speed="-3"  id="video1" autoplay loop muted src="./Z2BbT5bqstJ98kk6_REJOUICE-PORTFOLIO-LOOP-PROJECTS.mp4"></video>
+            <video data-scroll data-scroll-speed="-3"  id="video1" autoplay loop muted src="https://www.rejouice.com/static/reel-short.mp4"></video>
             <h1>Showreel</h1>
             <div id="cursor">
                 <i class="ri-play-fill"></i>
