--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="https://www.rejouice.com/favicon-96x96.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -102,12 +103,37 @@
                 <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z0cAypbqstJ970Cs_Frame1073714684.svg" alt="">
                 <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z2HXc5bqstJ98naA_Proof.svg" alt="">
             </div>
+            <div class="page5-center">
+                <h2>Rejouice at a Glance.</h2>
+                <h2>hello@gmail.com</h2>
+            </div>
+            <div class="swiper-div">
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="https://www.rejouice.com/_vercel/image?url=https:%2F%2Fimages.prismic.io%2Frejouice-2024%2FZ1m0HZbqstJ98VgZ_oura-abdul-ovaice-3d-cd-031.png?auto=format,compress?auto=compress,format&w=767&q=80" alt="">
+                            <img src="https://images.prismic.io/rejouice-2024/Z1m0-JbqstJ98Vh9_pergola-module-floor-1-360-grey-blue-bioclimatic-ceiling-and-curtains2.png?auto=format,compress" alt="">
+                            <img src="https://i.pinimg.com/1200x/b5/ae/d8/b5aed8f58267937379c1a5c8dc836059.jpg" alt="">
+                            <img src="https://i.pinimg.com/1200x/b3/b2/ae/b3b2aea872e9f87b9a6cbb4dd1b20ffb.jpg" alt="">
+                            <img src="https://i.pinimg.com/1200x/ef/e8/ef/efe8efb0bf9d554aff9660e0713a8108.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://i.pinimg.com/736x/01/36/7c/01367cc9cbaf03927cc9f71a5d920d89.jpg" alt="">
+                            <img src="https://i.pinimg.com/736x/d0/25/ae/d025ae18c6b07d54d74cf2e474cb3ba9.jpg" alt="">
+                            <img src="https://i.pinimg.com/736x/8c/e7/ae/8ce7aee59bdab17e94116306af08b481.jpg" alt="">
+                            <img src="https://i.pinimg.com/1200x/12/45/3c/12453ca8990bab53e9b4fef8c2b19b91.jpg" alt="">
+                            <img src="https://i.pinimg.com/1200x/df/41/89/df41893b0c9a24d2959988ba21fb49aa.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollTrigger.min.js" integrity="sha512-P2IDYZfqSwjcSjX0BKeNhwRUH8zRPGlgcWl5n6gBLzdi4Y5/0O4zaXrtO4K9TZK6Hn1BenYpKowuCavNandERg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
