--- a/index.html
+++ b/index.html
@@ -128,6 +128,30 @@
                 </div>
             </div>
         </div>
+        <div class="page6">
+            <div class="page6-top">
+                <h1>Our approch.</h1>
+                <div class="page6-content">
+                    <div class="page6-text">
+                        <h2>A simple philosophy: quality over quantity.</h2>
+                    </div>
+                    <div class="para-div">
+                        <p>We partner with five clients a year to deliver unmatched focus, and impact. Every detail is carefully crafted, every decision strategic, and every outcome transformative.</p>
+                    </div>
+                </div>
+                <div class="page6-content">
+                    <div class="page6-text">
+                        <h2>Performance & emotion. You need both.</h2>
+                    </div>
+                    <div class="para-div">
+                        <p>We craft brands that become category leaders. These brands aren’t built on products alone. Emotional connection and sustainable growth are the two essentials to get there. This is how you drive retention and advocacy.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="page6-cont">
+                
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
