--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <h2>A simple philosophy: quality over quantity.</h2>
                     </div>
                     <div class="para-div">
-                        <p>We partner with five clients a year to deliver unmatched focus, and impact. Every detail is carefully crafted, every decision strategic, and every outcome transformative.</p>
+                        <p>We partner with five clients a year to deliver unmatched focus, and impact Every detail is carefully crafted, every decision strategic, and every outcome transformative.</p>
                     </div>
                 </div>
                 <div class="page6-content">
@@ -144,12 +144,18 @@
                         <h2>Performance & emotion. You need both.</h2>
                     </div>
                     <div class="para-div">
-                        <p>We craft brands that become category leaders. These brands aren’t built on products alone. Emotional connection and sustainable growth are the two essentials to get there. This is how you drive retention and advocacy.</p>
+                        <p>We craft brands that become category leaders These brands aren’t built on products alone Emotional connection and sustainable growth are the two essentials to get there This is how you drive retention and advocacy.</p>
                     </div>
                 </div>
             </div>
             <div class="page6-cont">
-                
+                <video autoplay muted loop src="./video2.mp4"></video>
+            </div>
+        </div>
+        <div class="page7">
+            <div class="page7-center">
+                <span><h2>Get to know us</h2></span>
+                <span><h3>About Us</h3></span>
             </div>
         </div>
     </div>
