--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                 <span><h3>About Us</h3></span>
             </div>
         </div>
+        <div class="page8"></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
