--- a/index.html
+++ b/index.html
@@ -152,13 +152,54 @@
                 <video autoplay muted loop src="./video2.mp4"></video>
             </div>
         </div>
-        <div class="page7">
+        <div data-scroll data-scroll-speed="-3" class="page7">
             <div class="page7-center">
                 <span><h2>Get to know us</h2></span>
                 <span><h3>About Us</h3></span>
             </div>
         </div>
-        <div class="page8"></div>
+        <div class="page8">
+            <div class="page8-top">
+                <div class="top-left">
+                    <h1>Do it once. Do it right.</h1>
+                    <span>
+                        <h4>New Business:</h4>
+                        <h4>hello@rejouice.com</h4>
+                    </span>
+                    <div class="left-botom">
+                        <h3>Sign up for our newsletter (No spam)</h3>
+                        <div class="input-box">
+                            <input type="email" placeholder="Email">
+                            <i class="ri-arrow-right-line"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="top-right">
+                    <div class="text">
+                        <h4>home</h4>
+                        <h4>work</h4>
+                        <h4>about</h4>
+                        <h4>services</h4>
+                        <h4>contact</h4>
+                    </div>
+                    <div class="text">
+                        <h4>↗ Instagram ↗</h4>
+                        <h4>↗ LinkedIn ↗</h4>
+                    </div>
+                    <div class="text">
+                        <h4>San Diego—USA</h4>
+                        <h4>Paris—France</h4>
+                    </div>
+                    <div class="text">
+                        <h4>Terms of use</h4>
+                        <h4>©13—25</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="page8-bottom">
+                <h1>rejouice</h1>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
