--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <span><h3>About Us</h3></span>
             </div>
         </div>
-        <div class="page8">
+        <div data-scroll data-scroll-speed="-1" class="page8">
             <div class="page8-top">
                 <div class="top-left">
                     <h1>Do it once. Do it right.</h1>
