--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <body>
 
     <nav>
-        <h3>The growth Accelerator</h3>
+        <div class="nav-txt">
+            <h3>The growth Accelerator</h3>
+            <h2>rejouice</h2>
+        </div>
         <div id="nav-center">
             <h4>home</h4>
             <h4>work</h4>
