--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
             <h4>service</h4>
             <h4>contact</h4>
         </div>
-        <h4>let's talk ↗</h4>
+        <div class="h4-txt">
+            <h4>↗ let's talk ↗</h4>
+        </div>
     </nav>
+    <div class="video-div">
+        <video class="play-video" autoplay loop controls src="https://www.rejouice.com/static/reel-full.mp4"></video>
+    </div>
     <div id="main">
         <div class="page1">
             <div data-scroll data-scroll-speed="0"  class="page1-content">
