--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         </div>
     </nav>
     <div class="video-div">
-        <video class="play-video" autoplay loop controls src="https://www.rejouice.com/static/reel-full.mp4"></video>
+        <video class="play-video" autoplay loop  src="https://www.rejouice.com/static/reel-full.mp4"></video>
+        <div id="cursorr">
+                <i class="ri-play-fill"></i>
+                <h5>Play Reel</h5>
+            </div>
     </div>
     <div id="main">
         <div class="page1">
