--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <h3>The growth Accelerator</h3>
             <h2>rejouice</h2>
         </div>
+        <button>Menu</button>
         <div id="nav-center">
             <h4>home</h4>
             <h4>work</h4>
@@ -31,8 +32,8 @@
     <div class="video-div">
         <video class="play-video" autoplay loop  src="https://www.rejouice.com/static/reel-full.mp4"></video>
         <div id="cursorr">
-                <i class="ri-play-fill"></i>
-                <h5>Play Reel</h5>
+                <i class="ri-close-fill"></i>
+                <h5>close Reel</h5>
             </div>
     </div>
     <div id="main">
