--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
             <div data-scroll data-scroll-speed="0"  class="page1-content">
                 <h1 class="words" >rejouice</h1>
                 <div id="bottom">
-                    <h3>Strategy, Design, <br>Performance.</h3>
-                    <h3>Global Creative <br>& Technology Agency.</h3>
+                    <div class="h3-txxt">
+                        <h3>Strategy, Design, <br>Performance.</h3>
+                        <h3>Global Creative <br>& Technology Agency.</h3>
+                    </div>
+                    <i class="ri-arrow-down-line"></i>
                 </div>
-                <i class="ri-arrow-down-line"></i>
             </div>
         </div>
         <div class="page2">
