--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
         </div>
     </nav>
     <div class="video-div">
+        <i class="ri-close-fill"></i>
         <video class="play-video" autoplay loop  src="https://www.rejouice.com/static/reel-full.mp4"></video>
         <div id="cursorr">
-                <i class="ri-close-fill"></i>
-                <h5>close Reel</h5>
-            </div>
+            <i class="ri-close-fill"></i>
+            <h5>close Reel</h5>
+        </div>
     </div>
     <div id="main">
         <div class="page1">
@@ -52,6 +53,10 @@
         <div class="page2">
             <video data-scroll data-scroll-speed="-3"  id="video1" autoplay loop muted src="https://www.rejouice.com/static/reel-short.mp4"></video>
             <h1>Showreel</h1>
+            <div class="play-rel">
+                <i class="ri-play-fill"></i>
+                <h2>Play Reel</h2>
+            </div>
             <div id="cursor">
                 <i class="ri-play-fill"></i>
                 <h5>Play Reel</h5>
