--- a/index.html
+++ b/index.html
@@ -82,6 +82,17 @@
                 <h4>highlight</h4>
                 <div id="butn"><h4>↗See the work↗</h4></div>
             </div>
+            <div class="main-container">
+                <div class="boxes">
+                    <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2418&h=1390&fm=avif" alt="">
+                </div>
+                <div class="boxes">
+                    <img src="https://images.prismic.io/rejouice-2024/Z2AYnZbqstJ98i2G_oura-abdul-ovaice-photography-cd-21.png?auto=format,compress&w=2418&h=3140&fm=avif" alt="">
+                </div>
+                <div class="boxes">
+                    <img src="https://images.prismic.io/rejouice-2024/Z2AYnJbqstJ98i2E_moxionpower.2023.04.onlocation-17821.png?auto=format,compress&w=2418&h=3149&fm=avif" alt="">
+                </div>
+            </div>
             <div class="container1">
                 <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2418&h=1390&fm=avif" alt="">
                 <div class="box1">
@@ -114,14 +125,30 @@
         </div>
         <div class="page5">
             <div class="page5-top">
-                <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z0cA4ZbqstJ970C3_Rivian_logo_and_wordmark2.svg" alt="">
-                <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z0cAzJbqstJ970Cv_Frame1073714686.svg" alt="">
-                <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z2LneZbqstJ98pKu_Moxion.svg" alt="">
-                <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z1r07ZbqstJ98aSL_8VCVCFirm.svg" alt="">
-                <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z2LlrpbqstJ98pJz_RAPPI.svg" alt="">
-                <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z2Lo5ZbqstJ98pLj_HYPERFRAME.svg" alt="">
-                <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z0cAypbqstJ970Cs_Frame1073714684.svg" alt="">
-                <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z2HXc5bqstJ98naA_Proof.svg" alt="">
+                <div class="images-div">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z0cA4ZbqstJ970C3_Rivian_logo_and_wordmark2.svg" alt="">
+                </div>
+                <div class="images-div">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z0cAzJbqstJ970Cv_Frame1073714686.svg" alt="">
+                </div>
+                <div class="images-div">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z2LneZbqstJ98pKu_Moxion.svg" alt="">
+                </div>
+                <div class="images-div">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z1r07ZbqstJ98aSL_8VCVCFirm.svg" alt="">
+                </div>
+                <div class="images-div">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z2LlrpbqstJ98pJz_RAPPI.svg" alt="">
+                </div>
+                <div class="images-div">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z2Lo5ZbqstJ98pLj_HYPERFRAME.svg" alt="">
+                </div>
+                <div class="images-div">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z0cAypbqstJ970Cs_Frame1073714684.svg" alt="">
+                </div>
+                <div class="images-div">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z2HXc5bqstJ98naA_Proof.svg" alt="">
+                </div>
             </div>
             <div class="page5-center">
                 <h2>Rejouice at a Glance.</h2>
