--- a/index.html
+++ b/index.html
@@ -198,6 +198,42 @@
                     </div>
                 </div>
             </div>
+            <div class="swiper-div2">
+                <div class="swiper2 mySwiper2">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="https://www.rejouice.com/_vercel/image?url=https:%2F%2Fimages.prismic.io%2Frejouice-2024%2FZ1m0HZbqstJ98VgZ_oura-abdul-ovaice-3d-cd-031.png?auto=format,compress?auto=compress,format&w=767&q=80" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://images.prismic.io/rejouice-2024/Z1m0-JbqstJ98Vh9_pergola-module-floor-1-360-grey-blue-bioclimatic-ceiling-and-curtains2.png?auto=format,compress" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://i.pinimg.com/1200x/b5/ae/d8/b5aed8f58267937379c1a5c8dc836059.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://i.pinimg.com/1200x/b3/b2/ae/b3b2aea872e9f87b9a6cbb4dd1b20ffb.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://i.pinimg.com/1200x/ef/e8/ef/efe8efb0bf9d554aff9660e0713a8108.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://i.pinimg.com/736x/01/36/7c/01367cc9cbaf03927cc9f71a5d920d89.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://i.pinimg.com/736x/d0/25/ae/d025ae18c6b07d54d74cf2e474cb3ba9.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://i.pinimg.com/736x/8c/e7/ae/8ce7aee59bdab17e94116306af08b481.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://i.pinimg.com/1200x/12/45/3c/12453ca8990bab53e9b4fef8c2b19b91.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://i.pinimg.com/1200x/df/41/89/df41893b0c9a24d2959988ba21fb49aa.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="page6">
             <div class="page6-top">
@@ -223,7 +259,7 @@
                 <video autoplay muted loop src="./video2.mp4"></video>
             </div>
         </div>
-        <div data-scroll data-scroll-speed="-3" class="page7">
+        <div data-scroll data-scroll-speed="1" class="page7">
             <div class="page7-center">
                 <span><h2>Get to know us</h2></span>
                 <span><h3>About Us</h3></span>
