--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <video autoplay muted loop src="./video2.mp4"></video>
             </div>
         </div>
-        <div data-scroll data-scroll-speed="-2" class="page7">
+        <div class="page7">
             <div class="page7-center">
                 <span><h2>Get to know us</h2></span>
                 <span><h3>About Us</h3></span>
@@ -300,6 +300,31 @@
                     <div class="text">
                         <h4>Terms of use</h4>
                         <h4>©13—25</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="page8-up">
+                <div class="up-top">
+                    <div class="up-left">
+                        <h1>home</h1>
+                        <h1>work</h1>
+                        <h1>about</h1>
+                        <h1>services</h1>
+                        <h1>contact</h1>
+                    </div>
+                    <div class="up-right">
+                        <h4>Instagram ↗</h4>
+                        <h4>LinkedIn ↗</h4>
+                        <p>New Business: hello@rejouice.com</p>
+                        <h5>Terms of use</h5>
+                        <h4>©13—25</h4>
+                    </div>
+                </div>
+                <div class="page8-center">
+                    <h3>Sign up for our newsletter (No spam)</h3>
+                    <div class="input-box">
+                        <input type="email" placeholder="Email">
+                        <i class="ri-arrow-right-line"></i>
                     </div>
                 </div>
             </div>
