--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div class="menu-div">
+        <h4>Let's talk ↗</h4>
+        <div class="Menu-center">
+            <h2><span>home</span></h2>
+            <h2><span>work</span></h2>
+            <h2><span>about</span></h2>
+            <h2><span>services</span></h2>
+            <h2><span>contact</span></h2>
+        </div>
+        <div class="social">
+            <h3>Instagram</h3>
+            <h3>LinkedIn</h3>
+        </div>
+    </div>
     <nav>
         <div class="nav-txt">
             <h3>The growth Accelerator</h3>
