--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
             <h3>The growth Accelerator</h3>
             <h2>rejouice</h2>
         </div>
-        <button>Menu</button>
+        <div id="menu-btn">
+            <h4>Menu</h4>
+            <h5>Close</h5>
+        </div>
         <div id="nav-center">
             <h4>home</h4>
             <h4>work</h4>
@@ -274,8 +277,8 @@
         </div>
         <div class="page7">
             <div class="page7-center">
-                <span><h2>Get to know us</h2></span>
-                <span><h3>About Us</h3></span>
+                <h2>Get to know us</h2>
+                <h3>About Us</h3>
             </div>
         </div>
         <div data-scroll data-scroll-speed="-1" class="page8">
