--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="menu-div">
+    <div class="loader">
+        <h3>Tomorrow's</h3>
+        <h3>Brands,</h3>
+        <h3>Today <sup>TM</sup></h3>
+    </div>
+    <div data-scroll data-scroll-speed="0" class="menu-div">
         <h4>Let's talk ↗</h4>
         <div class="Menu-center">
             <h2><span>home</span></h2>
