--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="loader">
         <h3>Tomorrow's</h3>
         <h3>Brands,</h3>
-        <h3>Today <sup>TM</sup></h3>
+        <h3>Today.<sup>TM</sup></h3>
     </div>
     <div data-scroll data-scroll-speed="0" class="menu-div">
         <h4>Let's talk ↗</h4>
